--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
     # CircleCI will report the results back to your VCS provider.
     steps:
       - checkout
+      - run: git submodule update --init --recursive
       - run: python run.py
       - store_artifacts:
           path: sample/
